--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bar {
+  height: 10px;
+  font-size: 0px;
+  /* border: .5px solid white; */
+  box-shadow: 0 0 3px #ccc;
+  border-radius: 5px;
+}
+
+.bar:hover {
+  font-size: 20px;
+  height: 45px;
+}
