--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #EEEEEE;
+  background-color: #e7b5b5;
 }
 
 code {
@@ -13,130 +13,89 @@ code {
     monospace;
 }
 
-.header>img {
-  width: 2000px;
-  height: 125px;
-  overflow: hidden;
-}
-
 .body_container {
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+  padding-top: 50px;
   max-width: 1100px;
   margin: auto;
+}
+
+
+.bar_container {
+  border-radius: 20px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 0 3px rgb(85, 85, 85);
+  width: 65%;
+}
+
+.left_container {
+  top: 0px;
+  width: 30%;
 }
 
 .bar {
   height: 10px;
   font-size: 0px;
-  /* border: .5px solid white; */
   box-shadow: 0 0 3px #ccc;
-  /* border-radius: 5px; */
 }
 
-.bar_container {
-  border-radius: 20px;
-  position: static;
-  padding: 20px;
-  background-color: white;
-  box-shadow: 0 0 3px #ccc;
-  float: right;
-
-  width: 70%;
-  /* height: 70vh;
-  overflow: scroll; */
-  top: 20 px;
-}
 
 .bar:hover {
   font-size: 20px;
   height: 45px;
+  line-height: 45px;
+  padding-left: 10px;
+  color: white;
 }
 
 * {
   box-sizing: border-box;
 }
 
-/* Create two equal columns that floats next to each other */
-
-/* .column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-} */
-
-
-.left_container {
-  float: left;
-  width: 30%;
-}
-
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
-
-.search_container {
-  position: sticky;
-  border: 2px solid green;
-  margin-top: 40px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-}
-
-.search_bar {
-  border-radius: 15px;
-  width: 400px;
-  height: 40px;
-  border: none;
-  box-shadow: 2px 2px 4px grey;
-}
-
-.search_bar:hover {
-  border: 1px solid black;
-}
-
 .info_container {
-  top: 100px;
+  position: sticky;
+  top: 50px;
+  padding: 20px;
+  border-radius: 15px;
+  background-color: white;
+  box-shadow: 0 0 3px rgb(85, 85, 85)
 }
 
 .location {
-  font-size: 6vw;
-  /* font-size: 2em; */
+  font-size: 30px;
   font-weight: 900;
   font-family: 'Anton';
   text-align: center;
-
+  margin-top: 30px;
 }
 
 .temp_stats>h1 {
   font-family: 'Roboto';
-  font-size: 2.5vw;
+  font-size: 2px;
   text-align: center;
 }
 
 .temp_stats>h2 {
   font-family: 'Arial';
   font-weight: 300;
-  font-size: 1.5vw;
+  font-size: 15px;
   text-align: center;
+  margin-top: -10px;
 }
 
 .temp_stats>p {
+
   font-family: 'Roboto';
-  font-size: 5vw;
+  font-size: 60px;
   text-align: center;
   text-shadow: 2px 2px 4px grey;
-  line-height: 0em;
-  margin-top: 40px;
-  margin-bottom: 60px;
+  margin-top: 20px;
+  margin-bottom: -15px;
+}
+
+.Month {
+  margin-top: 30px;
 }
